<resources>
    <string name="app_name">DonDeSang</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_location">Location</string>
    <string name="title_news">News</string>
    <string name="title_infos">Infos</string>
    <string name="title_menu">Menu</string>
    <string name="title_top_bar">Donner \nC\'est partager</string>
    <string name="logo">Logo</string>
    <string name="connection">Connection</string>
    <string name="title_profile">Mon profil</string>
    <string name="connexion">Connexion</string>
    <string name="already_account">Déjà un compte ?</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="sign_in">Se connecter</string>
    <string name="title_first_connection">Première connexion ?</string>
    <string name="title_identifiant">Identifiant</string>
    <string name="title_password">Mot de passe</string>
    <string name="title_forgot_id">Identifiant oublié ?</string>
    <string name="title_forgot_password">Mot de passe oublié ?</string>
    <string name="title_password_confirmation">Confirmation mot de passe</string>
    <string name="inscription">Inscription</string>
    <string name="identifiant">Identifiant</string>
    <string name="username">Prénom Nom</string>
    <string name="title_hello">Bonjour</string>
    <string name="title_welcome">Bienvenue</string>
    <string name="informations">Vos informations</string>
    <string name="blood_donation_informations">Informations sur vos dons</string>
    <string name="badges_account">Vos badges</string>
    <string name="bloodGroup">Votre groupe sanguin est</string>
    <string name="donnor_infos">Informations donneur</string>
    <string name="civility">Civilité</string>
    <string name="name">Nom de famille</string>
    <string name="lastname">Prénom</string>
    <string name="birth_date">Date de naissance</string>
    <string name="place_of_birth">Lieu de naissance</string>
    <string name="healed_people">Vos dons ont soignés X personnes \nMerci !</string>
    <string name="blood_donation">Don de sang</string>
    <string name="plasma_donation">Don de plasma</string>
    <string name="plaquette_donation">Don de plaquettes</string>
    <string name="next_donation">Prochain don :\n</string>
    <string name="make_appointment">Prendre rendez-vous</string>
    <string name="blood">Sang</string>
    <string name="info_button">Info</string>
    <string name="plasma">Plasma</string>
    <string name="plaquette">Plaquette</string>
    <string name="example">Exemple</string>
    <string name="modify">Modifier</string>
    <string name="back">Retour</string>
    <string name="search_location">Chercher un lieu</string>
    <string name="take_appointment">Prise de rendez-vous</string>
    <string name="test">test</string>
    <string name="selection">Selectionner</string>
    <string name="image">Image</string>
    <string name="hour_choose">Choisissez une heure</string>
    <string name="type_donation">Don de ____</string>
    <string name="city">Ville</string>
    <string name="date">Date</string>
    <string name="envoyer">Envoyer</string>
    <string name="write_message">Ecrivez votre message</string>
    <string name="mail">Mail</string>
    <string name="badge">Mes Badges</string>
    <string name="emptyslot">Empty Slot</string>
    <string name="nobadge">Vous n\'avez pas de badge pour le moment !</string>
</resources>