<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_location">

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.example.dondesang.ui.location.LocationFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.dondesang.ui.news.NewsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_infos"
        android:name="com.example.dondesang.ui.infos.InfosFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_infos" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.dondesang.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_connection"
        android:name="com.example.dondesang.ui.connection.ConnectionFragment"
        android:label="@string/connection"
        tools:layout="@layout/fragment_connection_main" />

    <fragment
        android:id="@+id/navigation_account_menu"
        android:name="com.example.dondesang.ui.account.menu.MenuFragment"
        android:label="Menu"
        tools:layout="@layout/fragment_account_menu" />
</navigation>