<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/textTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/title_profile"
        android:textColor="@color/main_color"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/textSubTitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textSubTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/connexion"
        android:textColor="@color/main_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/verticalLineBlood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/verticalLineBlood"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:layout_marginBottom="40dp"
        android:background="#D9D9D9"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/connectionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/title_identifiant"
            android:textColor="@color/main_color"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/idTextField"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/textfield_background"
            android:drawableStart="@drawable/identifiant_image"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/identifiant"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textForgotId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:text="@string/title_forgot_id"
            android:textColor="@color/main_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/title_password"
            android:textColor="@color/main_color"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/textfield_background"
            android:drawableStart="@drawable/password_image"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/title_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/title_forgot_password"
            android:textColor="@color/main_color"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/connectionButton"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/button_background"
        android:text="@string/connexion"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>