<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/take_appointment"
        android:textColor="@color/main_color"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:layout_marginTop="25dp"
        android:background="#D9D9D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/calendar_background"
        android:theme="@style/CalenderViewCustom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <Button
        android:id="@+id/dateSelectionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_background"
        android:text="@string/selection"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/calendar_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine">

        <ImageView
            android:id="@+id/spinnerImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/blood" />

        <Spinner
            android:id="@+id/donationsSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/test"
            android:minHeight="48dp"
            android:theme="@style/CalenderViewCustom" />
    </LinearLayout>

    <Button
        android:id="@+id/appointmentBackButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/back_button_background"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/dateSelectionButton"
        app:layout_constraintStart_toStartOf="@+id/dateSelectionButton"
        app:layout_constraintTop_toBottomOf="@+id/dateSelectionButton" />

</androidx.constraintlayout.widget.ConstraintLayout>